@@ -3,6 +3,9 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- add support for (manually updated) CRLs for IPsec VPN
+  (contributed by Sebastian Lemke)
+
 - prevent /ext directory from being listed through webGUI
   (reported by Bernd Strehhuber)
 
